--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
+    "@gluestack-style/react": "^1.0.56",
+    "@gluestack-ui/themed": "^1.1.26",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
@@ -31,8 +35,10 @@
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
